added hopefully working apptianer file

--- a/SCI/src/LinearHE/CMakeLists.txt
+++ b/SCI/src/LinearHE/CMakeLists.txt
@@ -11,10 +11,12 @@ if (NOT SEAL_FOUND)
         execute_process(COMMAND git apply "${PROJECT_SOURCE_DIR}/cmake/seal.patch"
             WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/extern/SEAL")
     endif ()
+    execute_process(COMMAND mv ${PROJECT_SOURCE_DIR}/locks.h ${PROJECT_SOURCE_DIR}/extern/SEAL/native/src/seal/util/locks.h)
     execute_process(COMMAND ${CMAKE_COMMAND} -DCMAKE_INSTALL_PREFIX=${PROJECT_SOURCE_DIR}/build .
             WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/extern/SEAL/native/src")
     execute_process(COMMAND ${CMAKE_COMMAND} --build . --target install
         WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/extern/SEAL/native/src")
+    message(STATUS "finished --build . --trget install")
     find_package(SEAL 3.3.2 EXACT REQUIRED PATHS "${PROJECT_SOURCE_DIR}/build/" NO_DEFAULT_PATH)
 endif()
 
